--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans'), url(./assets/OpenSans-Regular.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Parisienne';
+    src: local('Parisienne'), url(./assets/Parisienne-Regular.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Raleway';
+    src: local('Raleway'), url(./assets/Raleway-Regular.ttf) format('truetype');
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bigHeadingCursive {
+    font-family: 'Parisienne', sans-serif;
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 20px;
 }
